# sayo_obs_plugin

./: CMakeLists.txt  README.md  buildspec.json
.github/scripts/: install_plugin.sh
src/: plugin-main.cpp  subtitle_buffer.cpp  subtitle_buffer.h
src/server_gRPC/: grpc_client.cpp  grpc_client.h  sayo.grpc.pb.cc  sayo.grpc.pb.h  sayo.pb.cc  sayo.pb.h  sayo.proto
